--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
 
       <div id="switch" onclick="toggleMode()">
        <button></button>
- 
-        <span>
-          
-        </span>
+       <span></span>
       </div>
       <ul>
         <li>
@@ -37,7 +34,11 @@
             ><ion-icon name="albums"></ion-icon>Certificados</a
           >
         </li>
+<li>
+  <a href="sobre.html" target="_blank"><ion-icon name="person-circle-outline"></ion-icon>Sobre Mim
 
+  </a>
+</li>
         <li>
           <a
             href="https://www.linkedin.com/in/jo%C3%A3o-victor-d-98902a287/"
@@ -69,6 +70,8 @@
                 <a href="https://www.facebook.com/victornomotoo" target="_blank">
                   <ion-icon name="logo-facebook"></ion-icon>
                 </a>
+                <a href="http://wa.me/5587981757594" target="_blank"> <ion-icon name="logo-whatsapp"></ion-icon>
+                </a>
 
 
       </div>
@@ -92,6 +95,7 @@
             Criado por <a href="https://www.instagram.com/victor_nomoto/">victor_nomoto
 
             </a>
+            
 
         </footer>
     </div>
